manifests/HyperBeam/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperbeam-deployment
  namespace: hyperbeam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperbeam
  template:
    metadata:
      labels:
        app: hyperbeam
    spec:
      containers:
        - name: hyperbeam
          image: 'foxoffire33/hyperbeam:latest'
          ports:
            - containerPort: 8734
            - containerPort: 6363
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: secrets-volume
              mountPath: /secrets
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: hyperbeam-pvc
        - name: secrets-volume
          secret:
            secretName: hyperbeam-wallet
