manifests/HyperBeam/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperbeam-ingress
  namespace: hyperbeam
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hyperbeam.delaparra.local
      secretName: hyperbeam-local
  rules:
    - host: hyperbeam.delaparra.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hb-service
                port:
                  number: 8734
